--- a/index.html
+++ b/index.html
@@ -2,6 +2,22 @@
 <html>
   <head>
     <title>My Portfolio</title>
+    <style>
+      body {
+        background-color: #f2f2f2;
+        font-family: Arial, sans-serif;
+        margin:0;
+        padding:0;
+      }
+      header {
+       background-color:#333;
+        color:white;
+        text-align:center;
+        padding:20px;
+        border-radius:10px;
+        box-shadow:0 0 10px rgba(0,0,0,0.2);
+      }
+    </style>
     <body>
       <header>
         <h1>THULASI</h1>
