--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         padding:0;
       }
       header {
-       background-color:#333;
+       background-color:#f2f2f2;
         color:white;
         text-align:center;
         padding:20px;
